--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -10,8 +10,9 @@ body {overflow:auto; height:100000px; }
 
 .centered { top:0; bottom:0; left:0; right:0; margin:auto; }
 
-#wish1 {background: #E7685D url('/images/slide1.png') center center no-repeat ; z-index:3;}
+#sld1 {background: #E7685D url('../images/slide1.png') center center no-repeat ; z-index:100;}
+#sld2 {background: #94C3B6 url('../images/slide2.png') center center no-repeat ; z-index:99;}
+#sld3 {background: #94C3B6 url('../images/slide2.png') center center no-repeat ; z-index:97; border-radius:50%;}
+#sld4 {background: #8DBAAE url('../images/slide3.png') no-repeat center center; z-index:98; border-radius:50%;}
 
-#wish2 {background: #94C3B6 url('/images/slide2.png') center center no-repeat ; z-index:2;}
 
-#wish3 {background:#8DBAAE url('/images/slide3.png') no-repeat center center; z-index:1; border-radius:50%;}
