--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,18 +1,20 @@
 html, body {padding:0;margin:0; font-family:Georgia, serif; color:#4a443d; text-align:center;}
 a {color:#4a443d; text-decoration:none}
-body {overflow:auto; height:7600px; }
+body {overflow:auto; height:10000px; }
 #skrollr-body {width:100%; height:100%; position:fixed; }
 #skrollr-body  div {overflow:hidden; position:absolute; }
 .centered { top:0; bottom:0; left:0; right:0; margin:auto; }
-#wish1 {background: #e7685d url('../images/merry1.png') center center no-repeat ; z-index:5;}
-#wish2 {background: #94c3b6 url('../images/merry2.jpg') center bottom no-repeat ; z-index:4; box-shadow: 0 0 0 20px #FFDA00;  }
+#wish1 {background: #000000 url('../images/20150914_155759.png') center center no-repeat ; z-index:6;}
+#wish2 {background: #94c3b6 url('../images/merry2.jpg') center bottom no-repeat ; z-index:5; box-shadow: 0 0 0 20px #FFDA00;  }
 #snow {width:363px; background:url('../images/snow.png') no-repeat}
 #pattern1 { background:url('../images/snow-flakes.png') ; z-index:2; background-attachment:fixed}
 .ribbon {background:#FFDA00; height:40px; top:50%; margin-top:-20px; z-index:3;   }
 #ribbon-left {left:0}
 #ribbon-right {right:0}
-svg {position:absolute; z-index:5; left:50%;  top:50%; margin-left:-170px; margin-top:-180px}
+svg {position:absolute; z-index:6; left:50%;  top:50%; margin-left:-170px; margin-top:-180px}
 #pattern2 { background:url('../images/pattern2.png'); z-index:1;}
-#wish3 {background:#8dbaae url('../images/imallyours.jpg') no-repeat center center; z-index:6; border-radius:30%;}
+#wish3 {background:#8dbaae url('../images/imallyours.jpg') no-repeat center center; z-index:7; border-radius:44%;}
+#wish4 {background:#8dbaae url('../images/imallyours.jpg') no-repeat center center; z-index:4; border-radius:44%;}
+/*#pattern3 {background:#8dbaae url('../images/merry2.jpg') no-repeat center center; z-index:7;}*/
 #info {background:#fff; width:20%; height:50px; bottom:auto; z-index:10; font-size:22px;  line-height:50px;}
 #copyright {font-size:12px;  z-index:10;bottom:10px; width:100%;}
