--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -5,9 +5,9 @@ body {overflow:auto; height:10000px; }
 #skrollr-body  div {overflow:hidden; position:absolute; }
 .centered { top:0; bottom:0; left:0; right:0; margin:auto; }
 #wish1 {background: #000000 url('../images/20150914_155759.png') center center no-repeat ; z-index:6;}
-#wish2 {background: #94c3b6 url('../images/merry2.jpg') center bottom no-repeat ; z-index:5; box-shadow: 0 0 0 20px #FFDA00;  }
+#wish2 {background: #94c3b6 url('../images/083a1110.jpg') center center no-repeat ; z-index:5; box-shadow: 0 0 0 20px #FFDA00;  }
 #snow {width:363px; background:url('../images/snow.png') no-repeat}
-#pattern1 { background:url('../images/snow-flakes.png') ; z-index:2; background-attachment:fixed}
+#pattern1 { background:url('../images/20150914_192505.png') ; z-index:2; background-attachment:fixed}
 .ribbon {background:#FFDA00; height:40px; top:50%; margin-top:-20px; z-index:3;   }
 #ribbon-left {left:0}
 #ribbon-right {right:0}
