--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -14,6 +14,6 @@ body {overflow:auto; height:10000px; }
 svg {position:absolute; z-index:6; left:50%;  top:50%; margin-left:-170px; margin-top:-180px}
 #pattern2 { background:url('../images/pattern2.png'); z-index:1;}
 #wish3 {background:#000000 url('../images/ring.jpg') no-repeat center center; z-index:6; background-size: 900px 600px; border-radius:50%;}
-#wish4 {background:#00000000 no-repeat center center; z-index:6; }
+.wish4 {background:#00000000 no-repeat center center; z-index:6; }
 /*#pattern3 {background:#8dbaae url('../images/merry2.jpg') no-repeat center center; z-index:7;}*/
 #info {background:#fff; width:20%; height:50px; bottom:auto; z-index:10; font-size:22px;  line-height:50px;}
